# basin3d

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  doecode.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  publish-pypi.yaml
basin3d/: __init__.py  monitor.py  synthesis.py
basin3d/core/: access.py  catalog.py  connection.py  logging.yaml  models.py  monitor.py  plugin.py  sqlalchemy_models.py  synthesis.py  translate.py  types.py
basin3d/core/schema/: enum.py  query.py
basin3d/data/: basin3d_observed_property_variables_vocabulary.csv  basin3d_observed_property_vocabulary.csv  basin3d_variables_hydrology.csv
basin3d/plugins/: epa.py  epa_mapping.csv  essdive.py  essdive_mapping.csv  mapping_usgs.csv  usgs.py  usgs_huc_codes.py  usgs_mapping.csv  usgs_result_quality.csv  usgs_statistic.csv
docs/: Makefile  acknowledgments.rst  api.rst  api_reference.rst  changelog.rst  concepts.rst  conf.py  contact.rst  copyright_notice.rst  examples.rst  getting_started.rst  index.html  index.rst  intro.rst  key_functions.rst  license_agreement.rst  models.rst  plugins.rst  quick_guide.rst  references.rst  requirements.txt
docs/_templates/: indexcontent.html
docs/docsrc/doctrees/: api.doctree  changelog.doctree  concepts.doctree  contact.doctree  contents.doctree  copyright_notice.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  intro.doctree  license_agreement.doctree  models.doctree
docs/docsrc/html/: .buildinfo  api.html  changelog.html  concepts.html  contact.html  contents.html  copyright_notice.html  examples.html  genindex.html  getting_started.html  index.html  intro.html  license_agreement.html  models.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/docsrc/html/_images/: inheritance-d2a3e36ba441ba4dbbe3de86fde0fee5e0af8514.png.map
docs/docsrc/html/_modules/: index.html
tests/: conftest.py  test_catalog.py  test_core_access.py  test_core_catalog.py  test_core_connection.py  test_core_models.py  test_core_plugins.py  test_core_schema.py  test_core_synthesis.py  test_core_translate.py  test_logging.py  test_plugins_epa.py  test_plugins_essdive.py  test_plugins_usgs.py  test_synthesis.py  utilities.py
tests/integration/: test_iv_values_usgs.py  test_plugins_epa.py  test_plugins_usgs.py
tests/resources/: basin3d_variables_duplicate.csv  basin3d_variables_wrong_header.csv  epa_1402.json  epa_14020001.json  epa_1402000101.json  epa_140200010101.json  epa_data1.csv  epa_data1_locs.json  epa_data2_SWL.csv  epa_data2_locs.json  epa_data3_arsenic.csv  epa_data3_locs.json  epa_data4_locs.json  epa_loc_empty.json  epa_loc_multiple.json  epa_loc_one_good.json  epa_loc_single.json  epa_mchd_88.json  epa_search_multiple_op.csv  invalid_url.txt  invalid_url.txt   new_huc_rdb.txt  usgs_data_09110000.rdb  usgs_feature_object_09110990.json  usgs_feature_object_09110990_09111250.json  usgs_feature_object_09111250.json  usgs_get_data_09110000.json  usgs_get_data_09110000_MEAN.json  usgs_get_data_09110000_MIN_MAX.json  usgs_get_data_09110000_VALIDATED.json  usgs_get_data_09110000_VALIDATED_UNVALIDATED.json  usgs_get_data_09110000_VALIDATED_UNVALIDATED_ESTIMATED.json  usgs_get_data_09110000_VALIDATED_UNVALIDATED_WT_only.json  usgs_get_data_09110000_missing_vals.json  usgs_get_data_bbox1.json  usgs_get_data_bbox1_202404.json  usgs_get_data_bbox2_202404.json  usgs_get_data_rdb_09110000.rdb  usgs_measurement_timeseries_09110990.json  usgs_measurement_timeseries_09111250.json  (+21 more)
tests/resources/epa_v2-2/: epa_data4_arsenic_test.csv  epa_empty_data.csv  epa_station14020001.csv
tests/resources/epa_v3-0/: epa_data1.csv  epa_data2_SWL.csv  epa_data3_arsenic.csv  epa_data4_arsenic_test.csv  epa_empty_data.csv  epa_station14020001.csv
tests/testplugins/: alpha.py  alpha_mapping.csv  alpha_statistic.csv  alpha_variables.csv  beta.py  beta_mapping.csv  complexmap.py  complexmap_mapping.csv  empty.py  error_mapping.csv  incomplete_meta.py  mapping_alpha.csv  mapping_alpha_duplicate.csv  mapping_alpha_wrong_header.csv  no_plugin_views.py  nopluginview_mapping.csv  plugin_error.py
(+40 files in other folders)
